Correction of navbar z-index

--- a/src/components/shared/navbar.module.css
+++ b/src/components/shared/navbar.module.css
@@ -69,6 +69,7 @@
   opacity: 0;
   visibility: hidden;
   transition: opacity 0.3s ease;
+  z-index: 100;
 }
 
 .navbar-menu-active {
@@ -82,6 +83,7 @@
   opacity: 1;
   visibility: visible;
   transition: opacity 0.3s ease;
+  z-index: 100;
 }
 
 .navbar-profile-active {
@@ -95,6 +97,7 @@
   opacity: 1;
   visibility: visible;
   transition: opacity 0.3s ease;
+  z-index: 100;
 }
 
 .navbar-menu-items,
